# mzn-bench

./: .gitignore  README.md  collect_statistics.py  config.py  merge_csv.sh  minizinc_slurm.py  nqueens.mzn  open_env.sh  pyproject.toml  requirements.txt  run_instance.py  run_instance.sh  run_post_processing.py  run_post_processing.sh  setup.py  start_slurm.py  test.csv
src/: minizinc_slurm.py  mzn_bench.py
src/minizinc_slurm_scripts/: collect_instances.py  collect_statistics.py  report_status.py
src/mzn_bench/: __init__.py  cli.py  mzn_slurm.py
src/mzn_bench/analysis/: analyse_changes.py  collect.py  plot.py  report_status.py
src/mzn_bench/pytest/: check_solutions.py  check_statuses.py
src/mzn_bench_scripts/analysis/: collect.py  report_status.py
src/mzn_bench_scripts/pytest/: check_solutions.py  check_statuses.py
tests/: n4.dzn  test.csv  test_run.py
